airflow/logs/dag_id=yandex-rates-test/run_id=manual__2023-02-04T072144.493696+0000/task_id=sql_sensor_check/attempt=2.log
[2023-02-04 07:26:53,017] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:21:44.493696+00:00 [queued]>
[2023-02-04 07:26:53,026] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:21:44.493696+00:00 [queued]>
[2023-02-04 07:26:53,026] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2023-02-04 07:26:53,027] {taskinstance.py:1377} INFO - Starting attempt 2 of 3
[2023-02-04 07:26:53,028] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2023-02-04 07:26:53,041] {taskinstance.py:1397} INFO - Executing <Task(SqlSensor): sql_sensor_check> on 2023-02-04 07:21:44.493696+00:00
[2023-02-04 07:26:53,045] {standard_task_runner.py:52} INFO - Started process 5701 to run task
[2023-02-04 07:26:53,047] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'yandex-rates-test', 'sql_sensor_check', 'manual__2023-02-04T07:21:44.493696+00:00', '--job-id', '121', '--raw', '--subdir', 'DAGS_FOLDER/yandex_dag_test.py', '--cfg-path', '/tmp/tmp6m2r0ab1', '--error-file', '/tmp/tmpkz88mry_']
[2023-02-04 07:26:53,048] {standard_task_runner.py:80} INFO - Job 121: Subtask sql_sensor_check
[2023-02-04 07:26:53,104] {task_command.py:371} INFO - Running <TaskInstance: yandex-rates-test.sql_sensor_check manual__2023-02-04T07:21:44.493696+00:00 [running]> on host 39df186e1726
[2023-02-04 07:26:53,167] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=yandex-rates-test
AIRFLOW_CTX_TASK_ID=sql_sensor_check
AIRFLOW_CTX_EXECUTION_DATE=2023-02-04T07:21:44.493696+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-02-04T07:21:44.493696+00:00
[2023-02-04 07:26:53,175] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-02-04 07:26:53,214] {sql.py:92} INFO - Poking: select * from rates where ingest_datetime > 2023-02-04 07:25:43 (with parameters None)
[2023-02-04 07:26:53,220] {base.py:68} INFO - Using connection ID 'my_db_conn' for task execution.
[2023-02-04 07:26:53,235] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/sensors/base.py", line 277, in execute
    poke_return = self.poke(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/sensors/sql.py", line 93, in poke
    records = hook.get_records(self.sql, self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 162, in get_records
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "07"
LINE 1: ...ect * from rates where ingest_datetime > 2023-02-04 07:25:43
                                                               ^

[2023-02-04 07:26:53,242] {taskinstance.py:1420} INFO - Marking task as UP_FOR_RETRY. dag_id=yandex-rates-test, task_id=sql_sensor_check, execution_date=20230204T072144, start_date=20230204T072653, end_date=20230204T072653
[2023-02-04 07:26:53,252] {standard_task_runner.py:97} ERROR - Failed to execute job 121 for task sql_sensor_check (syntax error at or near "07"
LINE 1: ...ect * from rates where ingest_datetime > 2023-02-04 07:25:43
                                                               ^
; 5701)
[2023-02-04 07:26:53,260] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-02-04 07:26:53,293] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
